--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,24 @@
 {
-  "env":{
-    "browser":true,
-    "es2021":true,
-    "node":true
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
   },
-  "extends":[
+  "extends": [
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "prettier",
+    "plugin:jsdoc/recommended"
   ],
-  "parser":"@typescript-eslint/parser",
-  "parserOptions":{
-    "ecmaVersion":12,
-    "sourceType":"module"
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
   },
-  "plugins":[
-    "@typescript-eslint"
-  ],
-  "rules":{
-    "@typescript-eslint/no-unused-vars":"error",
-    "@typescript-eslint/no-explicit-any":"error",
-    "prettier/prettier":0,
-    "no-console":"error"
+  "plugins": ["@typescript-eslint", "jsdoc"],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-explicit-any": "error",
+    "prettier/prettier": 0,
+    "no-console": "error"
   }
 }
