--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,14 @@
 # Express
 NODE_ENV=development
+
+# Server
+PORT=8080
+API_VERSION=v1
+JWT_SECRET_KEY=secret
+
+# Database
+DB_PORT=3306
+DB_HOST=localhost
+DB_USER=mysql
+DB_PWD=mysql
+DB_NAME=stdm-db
