--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,8 @@
       "@models/*": ["models/*"],
       "@routes/*": ["routes/*"],
       "@services/*": ["services/*"],
-      "@shared/*": ["shared/*"]
+      "@shared/*": ["shared/*"],
+      "@lib/*": ["lib/*"]
     },
     "types": ["node"],
     "target": "es5",
