--- a/.github/workflows/server-lint.yml
+++ b/.github/workflows/server-lint.yml
@@ -39,7 +39,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install dependencies
-        run: npm install
+        run: cd server && npm install
 
       - name: Check format
         run: cd server && npm run check:format
