--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,10 @@
     "eslint": "^8.33.0",
     "eslint-plugin-jsdoc": "^39.8.0",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "yup": "^0.32.11"
   }
 }
