--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,14 @@
       "@assets/*": ["public/assets/*"],
       "@enums/*": ["enums/*"],
       "@lib/*": ["lib/*"],
-      "@store/*": ["store/*"],
+      "@store/*": ["stores/*"],
       "@icons": ["icons"],
       "@layouts/*": ["modules/layouts/*"],
       "@locales/*": ["locales/*"],
       "@modules/*": ["modules/*"],
       "@components/*": ["components/*"],
       "@shared-hooks/*": ["shared-hooks/*"],
-      "@Atypes/*": ["types/*"],
+      "@stTypes/*": ["types/*"],
       "@util/*": ["utils/*"]
     },
     "types": ["node"],
