--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,13 @@
     "@mantine/form": "^5.7.2",
     "@mantine/hooks": "^5.7.2",
     "@mantine/next": "^5.7.2",
+    "@mantine/notifications": "^5.10.3",
     "@mantine/nprogress": "^5.7.2",
     "@tabler/icons": "^1.114.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.3.2",
     "eslint-config-next": "^13.0.4",
     "lodash": "^4.17.21",
     "next": "^13.0.4",
