--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.3.2",
+    "crypto": "^1.0.1",
     "eslint-config-next": "^13.0.4",
     "lodash": "^4.17.21",
     "next": "^13.0.4",
     "next-translate": "^1.6.0",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
