--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "cron": "^2.2.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "helmet": "^6.0.1",
@@ -28,17 +29,20 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/cron": "^2.0.0",
+    "@types/ejs": "^3.1.1",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
     "eslint-plugin-jsdoc": "^39.8.0",
+    "jsonwebtoken": "^9.0.0",
+    "prettier": "^2.8.3",
     "tslib": "^2.5.0",
     "typescript": "^4.9.3",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
-    "jsonwebtoken": "^9.0.0",
     "yup": "^0.32.11"
   }
 }
