--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "nodemon index.ts",
+    "start:demodata": "nodemon index.ts --demodata",
+    "start:rebuild": "nodemon index.ts --build-db",
     "build": "tsc",
     "check:all": "npm run check:format && npm run check:lint && npm run check:types && npm run build",
     "check:types": "tsc --pretty --noEmit",
