--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,9 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-jsdoc": "^39.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jsonwebtoken": "^9.0.0",
     "prettier": "^2.8.3",
     "tslib": "^2.5.0",
